<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="za.ac.cput.healthcare.EditObjectActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/please_enter_the_required_data"
        android:id="@+id/txtEnterEditData"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editEnterEditID"
        android:layout_below="@+id/txtEnterEditData"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_id_to_edit"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editEnterNewName"
        android:layout_below="@+id/editEnterEditID"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_new_first_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editEnterNewSurname"
        android:layout_below="@+id/editEnterNewName"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_new_surname"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editEnterNewStreet"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_new_street"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editEnterNewCity"
        android:layout_below="@+id/editEnterNewStreet"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_new_city"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editEnterNewCode"
        android:layout_below="@+id/editEnterNewCity"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_new_code"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/btnSubmitEdit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:onClick="onBtnSubmitEditClick"/>

</RelativeLayout>
