<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateObjectActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/please_enter_the_required_data"
        android:id="@+id/txtEnterCreateData"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editFirstName"
        android:layout_below="@+id/txtEnterCreateData"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/enter_first_nam_e"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editLastName"
        android:layout_below="@+id/editFirstName"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_last_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editStreet"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_street"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editEnterCity"
        android:layout_below="@+id/editStreet"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_city"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editEnterCode"
        android:layout_below="@+id/editEnterCity"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_code"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/btnSubmitCreate"
        android:layout_below="@+id/editEnterCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="onBtnSubmitCreateClick"/>
</RelativeLayout>
