<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="za.ac.cput.healthcare.MainMenuActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/please_select_an_option"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/btnCreate"
        android:layout_below="@+id/textView"
        android:width="100dp"
        android:height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:onClick="onBtnCreateClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_by_id"
        android:id="@+id/btnReadByID"
        android:layout_below="@+id/btnCreate"
        android:width="100dp"
        android:height="50dp"
        android:layout_centerHorizontal="true"
        android:onClick="onBtnReadByIDClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_all"
        android:id="@+id/btnReadAll"
        android:layout_below="@+id/btnReadByID"
        android:width="100dp"
        android:height="50dp"
        android:layout_centerHorizontal="true"
        android:onClick="onBtnReadAllClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/btnEdit"
        android:layout_below="@+id/btnReadAll"
        android:width="100dp"
        android:height="50dp"
        android:layout_centerHorizontal="true"
        android:onClick="obBtnEditClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/btnDelete"
        android:layout_below="@+id/btnEdit"
        android:width="100dp"
        android:height="50dp"
        android:layout_centerHorizontal="true"
        android:onClick="onBtnDeleteClick"/>
</RelativeLayout>
